[package]
name = "rocket_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "mysql", "json"] }
dotenv = "0.15.0"